# fs-tracer

./: .gitignore  Cargo.toml  README.md  TODO  flake.nix  log
fs-tracer/: Cargo.toml
fs-tracer-common/: Cargo.toml
fs-tracer-common/src/: lib.rs  vmlinux.rs
fs-tracer-ebpf/: Cargo.toml
fs-tracer-ebpf/src/: main.rs  vmlinux.rs
fs-tracer-ebpf/src/syscalls/: close.rs  fseek.rs  mod.rs  open.rs  write.rs
fs-tracer/src/: main.rs  syscall_handler.rs
tests/: a.out  openat.c  testfile
xtask/src/: build_ebpf.rs  run.rs
