[package]
name = "fs-tracer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
fs-tracer-common = { path = "../fs-tracer-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
bytes = "1.5.0"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
ureq = "2.9.7"
ctrlc = "3.4.4"
futures = "0.3.30"

[[bin]]
name = "fs-tracer"
path = "src/main.rs"
